--- a/IdentityServer4_Test/Views/Auth/Login.cshtml
+++ b/IdentityServer4_Test/Views/Auth/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model LoginViewModel
+﻿@model IdentityServer.Controllers.LoginViewModel
 
 <form asp-controller="Auth" asp-action="Login" method="post">
     <input type="hidden" asp-for="ReturnUrl" />
