--- a/IdentityServer4_Test/Views/Auth/Register.cshtml
+++ b/IdentityServer4_Test/Views/Auth/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model RegisterViewModel
+﻿@model IdentityServer.Controllers.RegisterViewModel
 
 <form asp-controller="Auth" asp-action="Register" method="post">
     <input type="hidden" asp-for="ReturnUrl" />
