--- a/IdentityServer4_Test/Views/_ViewImports.cshtml
+++ b/IdentityServer4_Test/Views/_ViewImports.cshtml
@@ -1,2 +1,1 @@
-﻿@using IdentityServer4_Test.Controllers
-@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
+﻿@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
